[tool.pdm]

[project]
name = "baidu-sign"
version = "0.1.0"
description = "Sign text for baidu fanyi"
authors = [
    {name = "ffreemt", email = "yucongo+fmt@gmail.com"},
]
dependencies = [
    "js2py>=0.74",
    "google-sign>=0.0.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
